# ssc

./: .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  GoogleTest.md  LICENSE.h  LICENSE.md  LICENSE.txt  README.md  all_configuration_warnings_2017.8.8_5220.txt  android_make_output.txt  datadictionary.md  index.html  ios_make_output.txt  mac_make_output.txt  make-sdk-android.sh  make-sdk-common.bat  make-sdk-ios.sh  make-sdk-linux.sh  make-sdk-osx.sh  make-sdk-win.bat  out  sco2_pc_core_PCRC_with_reHeating.cpp  sco2_pc_core_RCMCI_with_reHeating.cpp  sco2_pc_core_RCMCI_with_reHeating.h  sco2_pc_core_RCMCI_without_reHeating.cpp  ssc-devtools.md  ssc-tff.sln  ssc.sln  ssc.vcxproj  ssc_devtools.docx  ssc_vc2012.sln  sscapi.h  win32_debug_warnings_2017.8.8_1308.txt  write_license.py
lpsolve/: CMakeLists.txt  README.txt  colamd.cpp  colamd.h  commonlib.c  commonlib.cpp  commonlib.h  fortify.cpp  ini.cpp  ini.h  lp_BFP.h  lp_BFP1.c  lp_BFP1.cpp  lp_BFP2.c  lp_BFP2.cpp  lp_Hash.cpp  lp_Hash.h  lp_LUSOL.c  lp_LUSOL.cpp  lp_LUSOL.h  lp_MDO.cpp  lp_MDO.h  lp_MPS.c  lp_MPS.cpp  lp_MPS.h  lp_SOS.c  lp_SOS.cpp  lp_SOS.h  lp_bit.h  lp_crash.cpp  lp_crash.h  lp_lib.c  lp_lib.cpp  lp_lib.h  lp_matrix.c  lp_matrix.cpp  lp_matrix.h  lp_mipbb.c  lp_mipbb.cpp  lp_mipbb.h  (+52 more)
nlopt/: CMakeLists.txt  DIRect.cpp  DIRserial.cpp  DIRsubrout.cpp  README.md  auglag.cpp  auglag.h  bobyqa.cpp  bobyqa.h  ccsa_quadratic.cpp  cdirect.cpp  cdirect.h  cobyla.cpp  cobyla.h  config-windows.h  config.h  config.h.in  configure  configure.ac  crs.c  crs.cpp  crs.h  deprecated.cpp  direct-internal.h  direct.h  direct_wrap.cpp  esch.cpp  esch.h  general.cpp  hybrid.cpp  isres.c  isres.cpp  isres.h  luksan.h  mlsl.cpp  mlsl.h  mma.cpp  mma.h  mssubs.cpp  mt19937ar.cpp  (+29 more)
sdktool/: CMakeLists.txt  cmform.h  dataview.cpp  dataview.h  dllinvoke.cpp  dllinvoke.h  editvariable.cpp  editvariable.h  scripting.cpp  scripting.h  sscdev.cpp  sscdev.h  statdlg.h
shared/: 6par_gamma.h  6par_jacobian.h  6par_lu.h  6par_newton.h  6par_search.h  6par_solve.h  CMakeLists.txt  lib_aoi.h  lib_battery.cpp  lib_battery.h  lib_battery_capacity.cpp  lib_battery_capacity.h  lib_battery_dispatch.cpp  lib_battery_dispatch.h  lib_battery_dispatch_automatic_btm.cpp  lib_battery_dispatch_automatic_btm.h  lib_battery_dispatch_automatic_fom.cpp  lib_battery_dispatch_automatic_fom.h  lib_battery_dispatch_manual.cpp  lib_battery_dispatch_manual.h  lib_battery_dispatch_pvsmoothing_fom.cpp  lib_battery_dispatch_pvsmoothing_fom.h  lib_battery_dispatch_pvsmoothingts_fom.cpp  lib_battery_dispatch_pvsmoothingts_fom.h  lib_battery_lifetime.cpp  lib_battery_lifetime.h  lib_battery_lifetime_calendar_cycle.cpp  lib_battery_lifetime_calendar_cycle.h  lib_battery_lifetime_lmolto.cpp  lib_battery_lifetime_lmolto.h  lib_battery_lifetime_nmc.cpp  lib_battery_lifetime_nmc.h  lib_battery_powerflow.cpp  lib_battery_powerflow.h  lib_battery_voltage.cpp  lib_battery_voltage.h  lib_cec6par.cpp  lib_cec6par.h  lib_financial.cpp  lib_financial.h  (+88 more)
solarpilot/: API_structures.cpp  API_structures.h  Ambient.cpp  Ambient.h  AutoPilot_API.cpp  AutoPilot_API.h  CMakeLists.txt  Financial.cpp  Financial.h  Flux.cpp  Flux.h  Heliostat.cpp  Heliostat.h  IOUtil.cpp  IOUtil.h  Land.cpp  Land.h  LayoutSimulateThread.cpp  LayoutSimulateThread.h  MultiRecOptimize.cpp  MultiRecOptimize.h  OpticalMesh.cpp  OpticalMesh.h  Plant.cpp  Plant.h  Receiver.cpp  Receiver.h  STObject.cpp  STObject.h  STSimulateThread.cpp  STSimulateThread.h  SolarField.cpp  SolarField.h  Toolbox.cpp  Toolbox.h  definitions.cpp  definitions.h  exceptions.hpp  fluxsim.cpp  fluxsim.h  (+17 more)
splinter/: CMakeLists.txt  bspline.h  bsplinebasis1d.cpp  bsplinebuilder.cpp  datatable.h  definitions.h  linearsolvers.h
ssc/: CMakeLists.txt  cmod_6parsolve.cpp  cmod_analysisperiodchange_eqns.cpp  cmod_analysisperiodchange_eqns.h  cmod_annualoutput.cpp  cmod_battery.cpp  cmod_battery.h  cmod_battery_eqns.cpp  cmod_battery_eqns.h  cmod_battery_stateful.cpp  cmod_battery_stateful.h  cmod_battwatts.cpp  cmod_battwatts.h  cmod_belpe.cpp  cmod_biomass.cpp  cmod_cashloan.cpp  cmod_cashloan_heat.cpp  cmod_cb_construction_financing.cpp  cmod_cb_empirical_hce_heat_loss.cpp  cmod_cb_mspt_system_costs.cpp  cmod_cec_inv_cg.cpp  cmod_communitysolar.cpp  cmod_csp_common_eqns.cpp  cmod_csp_common_eqns.h  cmod_csp_dsg_lf_ui.cpp  cmod_csp_heatsink.cpp  cmod_csp_subcomponent.cpp  cmod_csp_tower_eqns.cpp  cmod_csp_tower_eqns.h  cmod_csp_tower_particle.cpp  cmod_csp_trough_eqns.cpp  cmod_csp_trough_eqns.h  cmod_custom_generation.cpp  cmod_dsg_flux_preprocess.cpp  cmod_equpartflip.cpp  cmod_etes_electric_resistance.cpp  cmod_etes_ptes.cpp  cmod_financial_eqns.cpp  cmod_financial_eqns.h  cmod_fossilgen.cpp  (+195 more)
tcs/: CMakeLists.txt  CO2_properties.cpp  CO2_properties.h  Heliostat_AzElAod.cpp  atmospheric_aod.cpp  atmospheric_aod.h  base_dispatch.cpp  base_dispatch.h  cavity_calcs.cpp  cavity_calcs.h  cmod_sco2_design_cycle_with_reHeating.cpp  cmod_sco2_design_point_with_reHeating.cpp  co2_compressor_library.cpp  co2_compressor_library.h  co2_testing.h  co2props_nn1.cpp  co2props_nn1.h  compact_hx_discretized.cpp  compact_hx_discretized.h  csp_dispatch.cpp  csp_dispatch.h  csp_radiator.cpp  csp_radiator.h  csp_solver_NTHeatTrap_tes.cpp  csp_solver_NTHeatTrap_tes.h  csp_solver_cavity_receiver.cpp  csp_solver_cavity_receiver.h  csp_solver_core.cpp  csp_solver_core.h  csp_solver_core_ADJUSTED.cpp  csp_solver_core_NEW.cpp  csp_solver_cr_electric_resistance.cpp  csp_solver_cr_electric_resistance.h  csp_solver_cr_heat_pump.cpp  csp_solver_cr_heat_pump.h  csp_solver_falling_particle_collector_receiver.cpp  csp_solver_falling_particle_collector_receiver.h  csp_solver_falling_particle_receiver.cpp  csp_solver_falling_particle_receiver.h  csp_solver_fresnel_collector_receiver.cpp  (+193 more)
tcsconsole/: CMakeLists.txt  Info-TCSConsole.plist  Makefile-osx  splash.xpm  tcslayout.cpp  tcslayout.h  tcsmain.cpp  tcsmain.h  tcsscript.cpp  tcsscript.h
test/: CMakeLists.txt  compare_elapsed_time.py  lib_battery_test.cpp  main.cpp
(+1945 files in other folders)
